--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
   "license": "BSD-3-Clause",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
-  "name": "lightship",
+  "name": "@sdacunha/lightship",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gajus/lightship"
+    "url": "https://github.com/sdacunha/lightship"
   },
   "scripts": {
     "build": "rm -fr ./dist && tsc",
